Fixes Accordian project overlapping issue

--- a/src/components/accordian/style.css
+++ b/src/components/accordian/style.css
@@ -1,7 +1,6 @@
-.wrapper {
-  width: 100vw;
-  height: 100vh;
-  margin-top: 50px;
+.accordian-wrapper {
+  width: 100%;
+  margin: 30px 0;
 }
 
 .dataItem {
